added markdown support for database files in notion

--- a/notion-export.ipynb
+++ b/notion-export.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
     "        # drop filename from file\n",
     "        middle += f\"{status_format}\".format(status=status)\n",
     "        for name in names:\n",
-    "            processed_name = name.replace('/', ' ')[:50]\n",
+    "            processed_name = name.replace('/', ' ').replace(\"?\", \" \").replace(\"  \",\" \")[:50]\n",
     "            filename_for_task = transform_filename(f\"{base_without_ext}/{processed_name}.md\")\n",
     "            middle += f\"- [ ] [[{filename_for_task}|{name}]]\\n\"\n",
     "        \n",
@@ -178,7 +178,16 @@
     "\n",
     "\n",
     "def process_database_csv(df):\n",
-    "    pass\n",
+    "    \"\"\"Formatting df as markdown database\n",
+    "    | Name    | Age | City          |     |     |\n",
+    "    | ------- | --- | ------------- | --- | --- |\n",
+    "    | Alice   | 30  | New York      |     |     |\n",
+    "    | Bob     | 25  | San Francisco |     |     |\n",
+    "    | Charlie | 35  | Los Angeles   |     |     |\n",
+    "    |         |     |               |     |     |\n",
+    "    \"\"\"\n",
+    "    return df.to_markdown()\n",
+    "\n",
     "\n",
     "TRANSFORMED_PREFIX = 'Transformed/'\n",
     "\n",
@@ -191,20 +200,20 @@
     "        if all(elem in cols for elem in kanban_csv_columns):\n",
     "            print(\"All columns are present for a kanban board\")\n",
     "            out_content = process_kanban_csv(df, file)\n",
-    "            transformed_filename = transform_filename(file)\n",
-    "            transformed_filename = TRANSFORMED_PREFIX+ transformed_filename.replace('.csv', '.md')\n",
-    "            # Get the directory path from the file path\n",
-    "            directory = os.path.dirname(transformed_filename)\n",
-    "            \n",
-    "            # Create the directory and any parent directories if they don't exist\n",
-    "            os.makedirs(directory, exist_ok=True)\n",
-    "            with open(transformed_filename, \"w+\") as f:\n",
-    "                f.write(out_content)\n",
     "            #with open(transformed_filename, )\n",
     "            #print(\"TRANSFORMED INTO \" + transformed_filename)\n",
     "        else:\n",
     "            print(\" This is a normal database csv lets iterpret as a markdown csv\")\n",
+    "            out_content = process_database_csv(df)\n",
+    "        transformed_filename = transform_filename(file)\n",
+    "        transformed_filename = TRANSFORMED_PREFIX+ transformed_filename.replace('.csv', '.md')\n",
+    "        # Get the directory path from the file path\n",
+    "        directory = os.path.dirname(transformed_filename)\n",
     "        \n",
+    "        # Create the directory and any parent directories if they don't exist\n",
+    "        os.makedirs(directory, exist_ok=True)\n",
+    "        with open(transformed_filename, \"w+\") as f:\n",
+    "            f.write(out_content)\n",
     "\n",
     "\n",
     "    # if file is md file\n",
@@ -245,10 +254,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"Create dataloader price caching module to fetch fr\")"
+   ]
   },
   {
    "cell_type": "code",
