some code fixes to change output folder name

--- a/notion-export.ipynb
+++ b/notion-export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "# markdown files can be interpreted by obsidian and these are ok\n",
     "# we need to take any csv and interpret them as kanbans or normal databases and transform them to the like md format\n",
     "\n",
-    "folder_name = \"Export/\""
+    "folder_name = \"Export/\"\n",
+    "out_folder_name = \"Transformed/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
     "    #print(base_without_ext)\n",
     "    middle= \"\"\n",
     "    status_format = \"\\n## {status}\\n\"\n",
-    "\n",
+    "    base_without_ext = base_without_ext.replace(folder_name, out_folder_name)\n",
     "    for status in unique_statuses:\n",
     "        sub_df = df[df[\"Status\"] == status]\n",
     "        names = list(sub_df['Name'])\n",
@@ -206,7 +207,7 @@
     "            print(\" This is a normal database csv lets iterpret as a markdown csv\")\n",
     "            out_content = process_database_csv(df)\n",
     "        transformed_filename = transform_filename(file)\n",
-    "        transformed_filename = TRANSFORMED_PREFIX+ transformed_filename.replace('.csv', '.md')\n",
+    "        transformed_filename = transformed_filename.replace('.csv', '.md').replace(folder_name, out_folder_name)\n",
     "        # Get the directory path from the file path\n",
     "        directory = os.path.dirname(transformed_filename)\n",
     "        \n",
@@ -220,10 +221,9 @@
     "    if file.endswith('.md'):\n",
     "        #print(\"MD File: \" + file)\n",
     "        out_content, new_filename = process_markdown_file(file)\n",
-    "        new_filename_with_base = TRANSFORMED_PREFIX+new_filename\n",
+    "        new_filename_with_base = new_filename.replace(folder_name, out_folder_name)\n",
     "            # Get the directory path from the file path\n",
     "        directory = os.path.dirname(new_filename_with_base)\n",
-    "        \n",
     "        # Create the directory and any parent directories if they don't exist\n",
     "        os.makedirs(directory, exist_ok=True)\n",
     "        with open(new_filename_with_base, \"w+\") as f:\n",
